update flow ussage, security, and more
